# truckmybudget

./: .gitignore  compose-dev.yaml  compose-example.yaml  compose.yaml  compose.yaml.tpl  package-lock.json  package.json
backend/: app.py  db.py  pyproject.toml  requirements.txt  run.sh  with-device.txt
backend/config/: settings.py
backend/models/: accounts.py  categories.py  expenses.py  groups.py  invoices.py  tags.py  users.py
backend/routes/: accounts.py  categories.py  expenses.py  groups.py  invoices.py  tags.py
compose/: backend.Dockerfile  frontend.Dockerfile
compose/dev/: backend.Dockerfile  frontend.Dockerfile
compose/prod/: Dockerfile  entrypoint.sh  nginx.conf  run_backend.sh  supervisor.conf
frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  entrypoint.sh  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.jsx  paths.js  serviceWorker.js  setupTests.js
frontend/src/__tests__/: App.test.jsx
frontend/src/components/Accounts/: index.jsx
frontend/src/components/AddAccountDialog/: index.jsx
frontend/src/components/AddGroupDialog/: index.jsx
frontend/src/components/AddTagDialog/: index.jsx
frontend/src/components/CreateExpenseDialog/: index.jsx
frontend/src/components/DownloadFile/: index.jsx
frontend/src/components/Drawer/: index.jsx
frontend/src/config/: network_endpoints.json
frontend/src/constants/: colors.js
frontend/src/entities/: rootReducer.js
frontend/src/redux/: store.js
frontend/src/utils/: auth.jsx  functions.js  network.js
(+45 files in other folders)
