[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for TMB App"
authors = ["Rafal Gumienny <rafal.gumienny@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beanie = "^1.11.9"
fastapi = "^0.85"
fastapi-users = "^10.1.5"
fastapi-users-db-beanie = "^1.0.0"
motor = "^3.0.0"
multidict = "^6.0.2"
PyJWT = "2.4.0"
python-multipart = "^0.0.5"
uvicorn = "^0.18.3"

[tool.poetry.group.dev.dependencies]
# black = ""
# pytest = ""
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
